[package]
name = "pallet-ahm-controller"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
xcm = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

pallet-indices = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"xcm/std",
	"pallet-indices/std",
	"pallet-balances/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-balances/try-runtime"
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks"
]
