[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"], workspace = true }

polkadot-runtime = { workspace = true }
kusama-runtime = { workspace = true }

sc-chain-spec = { workspace = true }
sc-network = { workspace = true }

asset-hub-polkadot-runtime = { workspace = true }
asset-hub-kusama-runtime = { workspace = true }
collectives-polkadot-runtime = { workspace = true }
bridge-hub-polkadot-runtime = { workspace = true }
bridge-hub-kusama-runtime = { workspace = true }
# encointer-kusama-runtime = { workspace = true }
glutton-kusama-runtime = { workspace = true }
coretime-kusama-runtime = { workspace = true }
coretime-polkadot-runtime = { workspace = true }
people-kusama-runtime = { workspace = true }
people-polkadot-runtime = { workspace = true }

[features]
fast-runtime = ["kusama-runtime/fast-runtime", "polkadot-runtime/fast-runtime"]
runtime-benchmarks = [
	"asset-hub-kusama-runtime/runtime-benchmarks",
	"asset-hub-polkadot-runtime/runtime-benchmarks",
	"bridge-hub-kusama-runtime/runtime-benchmarks",
	"bridge-hub-polkadot-runtime/runtime-benchmarks",
	"collectives-polkadot-runtime/runtime-benchmarks",
	"coretime-kusama-runtime/runtime-benchmarks",
	"coretime-polkadot-runtime/runtime-benchmarks",
	# "encointer-kusama-runtime/runtime-benchmarks",
	"glutton-kusama-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"people-kusama-runtime/runtime-benchmarks",
	"people-polkadot-runtime/runtime-benchmarks",
	"polkadot-runtime/runtime-benchmarks",
]

on-chain-release-build = [
	"asset-hub-kusama-runtime/on-chain-release-build",
	"asset-hub-polkadot-runtime/on-chain-release-build",
	"bridge-hub-kusama-runtime/on-chain-release-build",
	"bridge-hub-polkadot-runtime/on-chain-release-build",
	"collectives-polkadot-runtime/on-chain-release-build",
	"coretime-kusama-runtime/on-chain-release-build",
	"coretime-polkadot-runtime/on-chain-release-build",
	# "encointer-kusama-runtime/on-chain-release-build",
	"glutton-kusama-runtime/on-chain-release-build",
	"kusama-runtime/on-chain-release-build",
	"people-kusama-runtime/on-chain-release-build",
	"people-polkadot-runtime/on-chain-release-build",
	"polkadot-runtime/on-chain-release-build",
]
