[package]
name = "chain-spec-generator"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde = { features = ["derive"], workspace = true }

polkadot-runtime = { workspace = true, optional = true }
kusama-runtime = { workspace = true, optional = true }

sc-chain-spec = { workspace = true }
sc-network = { workspace = true }

asset-hub-polkadot-runtime = { workspace = true, optional = true }
asset-hub-kusama-runtime = { workspace = true, optional = true }
collectives-polkadot-runtime = { workspace = true, optional = true }
bridge-hub-polkadot-runtime = { workspace = true, optional = true }
bridge-hub-kusama-runtime = { workspace = true, optional = true }
#encointer-kusama-runtime = { workspace = true, optional = true }
glutton-kusama-runtime = { workspace = true, optional = true }
coretime-kusama-runtime = { workspace = true, optional = true }
coretime-polkadot-runtime = { workspace = true, optional = true }
people-kusama-runtime = { workspace = true, optional = true }
people-polkadot-runtime = { workspace = true, optional = true }

[features]
default = ["all-runtimes"]
fast-runtime = ["kusama-runtime?/fast-runtime", "polkadot-runtime?/fast-runtime"]
runtime-benchmarks = [
	"asset-hub-kusama-runtime?/runtime-benchmarks",
	"asset-hub-polkadot-runtime?/runtime-benchmarks",
	"bridge-hub-kusama-runtime?/runtime-benchmarks",
	"bridge-hub-polkadot-runtime?/runtime-benchmarks",
	"collectives-polkadot-runtime?/runtime-benchmarks",
	"coretime-kusama-runtime?/runtime-benchmarks",
	"coretime-polkadot-runtime?/runtime-benchmarks",
#	"encointer-kusama-runtime?/runtime-benchmarks",
	"glutton-kusama-runtime?/runtime-benchmarks",
	"kusama-runtime?/runtime-benchmarks",
	"people-kusama-runtime?/runtime-benchmarks",
	"people-polkadot-runtime?/runtime-benchmarks",
	"polkadot-runtime?/runtime-benchmarks",
]

on-chain-release-build = [
	"asset-hub-kusama-runtime?/on-chain-release-build",
	"asset-hub-polkadot-runtime?/on-chain-release-build",
	"bridge-hub-kusama-runtime?/on-chain-release-build",
	"bridge-hub-polkadot-runtime?/on-chain-release-build",
	"collectives-polkadot-runtime?/on-chain-release-build",
	"coretime-kusama-runtime?/on-chain-release-build",
	"coretime-polkadot-runtime?/on-chain-release-build",
#	"encointer-kusama-runtime?/on-chain-release-build",
	"glutton-kusama-runtime?/on-chain-release-build",
	"kusama-runtime?/on-chain-release-build",
	"people-kusama-runtime?/on-chain-release-build",
	"people-polkadot-runtime?/on-chain-release-build",
	"polkadot-runtime?/on-chain-release-build",
]

polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
asset-hub-polkadot = ["asset-hub-polkadot-runtime"]
asset-hub-kusama = ["asset-hub-kusama-runtime"]
collectives-polkadot = ["collectives-polkadot-runtime"]
bridge-hub-polkadot = ["bridge-hub-polkadot-runtime"]
bridge-hub-kusama = ["bridge-hub-kusama-runtime"]
#encointer-kusama = ["encointer-kusama-runtime"]
glutton-kusama = ["glutton-kusama-runtime"]
coretime-kusama = ["coretime-kusama-runtime"]
coretime-polkadot = ["coretime-polkadot-runtime"]
people-kusama = ["people-kusama-runtime"]
people-polkadot = ["people-polkadot-runtime"]

all-polkadot = [
	"asset-hub-polkadot",
	"bridge-hub-polkadot",
	"collectives-polkadot",
	"coretime-polkadot",
	"people-polkadot",
	"polkadot",
]
all-kusama = [
	"asset-hub-kusama",
	"bridge-hub-kusama",
	"coretime-kusama",
#	"encointer-kusama",
	"glutton-kusama",
	"kusama",
	"people-kusama",
]
all-runtimes = [
	"all-kusama",
	"all-polkadot",
]
