[package]
name = "zombienet-sdk-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { features = ["native"] , workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
zombienet-sdk = { workspace = true }
log = { workspace = true, default-features = true }
anyhow = { workspace = true }
