[package]
name = "pallet-asset-hub-migration-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

sp-api = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std"
]
